# 3d-render-in-terminal

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/renderer/: __init__.py  drm.py  engine.py  objects.py  terminal.py
src/terminal_3d_renderer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_projection.py
